# fastapi-websockets

./: .dockerignore  Dockerfile  docker-compose.yaml  gunicorn.conf.py  pyproject.toml
fastapi_websockets/: main.py
tests/: test_websocket.py
