[tool.poetry]
name = "fastapi-websockets"
version = "0.1.0"
description = ""
authors = ["andrewguest <andrew@aguest.me>"]
readme = "README.md"
packages = [{include = "fastapi_websockets"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.100.0"
uvicorn = "^0.23.1"
gunicorn = "^21.2.0"
python-dotenv = "^1.0.0"
websockets = "^11.0.3"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
httpx = "^0.24.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
